@@ -1,78 +1,3 @@
-
-These are some useful utilities for accessing/maintaining the
-chroots.
-
-The <chroot> arg used by most scripts has two forms:
-
-  · s,stable,-t,testing,-u,unstable
-
-    - a symlink in the current directory, chroot-{stable,testing,unstable}
-      pointing to the chroot must exist
-
-  · any other distribution name
-
-    - in this case the argument is parsed to try and determine
-      the distribution, for those scripts that need it, for example:
-
-      # checkchroot stable-security
-
-      - CHROOT=/usr/local/chroot/chroot-stable-security
-      - DIST=stable-security so it can find the ref-stable-security
-        reference file
-
-The scripts:
-
- ------------------------------------------
-    abort-current-build
-
-Aborts the current dpkg-buildpackage process.
-Author: Roman Hodek
-
- ------------------------------------------
-    checkchroot <chroot>
-
-Shows how the contents of the chroot differs from a reference.
-This requires the ref-{stable,testing,unstable} files to be in the
-chroot root:
-
-    # cp /usr/share/doc/sbuild/configs/ref-{stable,testing,unstable} \
-        /usr/local/chroot
-
-The chroots should only include essential & build-essential
-packages and the extra packages that sbuild needs: apt, fakeroot,
-ssmtp.  Please check that the references are accurate for
-your arch.
-
- ------------------------------------------
-    chr-hold <chroot> pkg [pkg..]
-    chr-unhold <chroot> pkg [pkg..]
-
-For changing the hold/install status of packages in the chroots.
-
- ------------------------------------------
-    chrapt <chroot> apt-get|apt-cache arguments
-
-Runs apt-get or apt-cache in the chroot from base.
-
- ------------------------------------------
-    gochroot <chroot>
-
-Enter the chroot.
-
- ------------------------------------------
-    updatechroot
-    upgradechroot
-
-Scripts to keep the chroots up to date.  Can be run as cron jobs
-from base.
-
- ------------------------------------------
-    add_sbuild_user /path/to/chroot <dist> <user>
-
-A script to add a new user to a chroot.  See
-/usr/share/doc/sbuild/README-buildd.chroot.
-
- ------------------------------------------
     dobuildlog
 
 A shell script for mutt & vi to handle the build logs that
