@@ -30,7 +30,10 @@ for the specified packages, respectively.
 .SH OPTIONS
 .TP
 .I chroot
-The chroot to use.
+The chroot to use.  Note that \[oq]o\[cq], \[oq]s\[cq],
+\[oq]t\[cq], \[oq]u\[cq] and \[oq]e\[cq] may be used as abbreviations for
+\[oq]oldstable\[cq], \[oq]stable\[cq], \[oq]testing\[cq], \[oq]unstable\[cq]
+and \[oq]experimental\[cq], respectively.
 .TP
 .I package
 The packages for which the hold status is to be changed.
